[package]
name = 'img2cssart'
version = '0.1.0'
edition = '2021'
license = 'MIT'
readme = 'README.md'
repository = 'https://github.com/loadedice/img2cssart/'

[lib]
crate-type = ['cdylib']

[profile.release]
lto = true
opt-level = 'z'

[dependencies]
js-sys = '0.3'
wasm-bindgen = '0.2'
wasm-bindgen-futures = '0.4'

[dependencies.image]
version = '0.24'
default-features = false
features = ['jpeg', 'png', 'gif']

[dependencies.web-sys]
version = '0.3'
features = [
  'Document',
  'File',
  'FileList',
  'HtmlInputElement',
  'HtmlButtonElement',
  'EventListener',
  'EventTarget',
  'Window',
]
